--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "page-loader",
   "version": "0.0.1",
   "description": "cli utility for downloading Web pages",
+  "engines": {
+    "node": ">=14"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx -n --experimental-vm-modules jest"
   },
   "repository": {
     "type": "git",
@@ -19,5 +22,16 @@
   "bugs": {
     "url": "https://github.com/ushachev/backend-project-lvl3/issues"
   },
-  "homepage": "https://github.com/ushachev/backend-project-lvl3#readme"
+  "type": "module",
+  "jest": {
+    "testEnvironment": "node"
+  },
+  "homepage": "https://github.com/ushachev/backend-project-lvl3#readme",
+  "devDependencies": {
+    "eslint": "^7.1.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.13.2",
+    "jest": "^26.0.1"
+  }
 }
