--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^23.13.2",
-    "jest": "^26.0.1"
+    "jest": "^26.0.1",
+    "nock": "^12.0.3"
+  },
+  "dependencies": {
+    "axios": "^0.19.2"
   }
 }
