--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
-    "commander": "^5.1.0"
+    "commander": "^5.1.0",
+    "debug": "^4.1.1"
   }
 }
