--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "axios-debug-log": "^0.7.0",
     "cheerio": "^1.0.0-rc.3",
     "commander": "^5.1.0",
     "debug": "^4.1.1"
