add url validation

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "axios-debug-log": "^0.7.0",
     "cheerio": "^1.0.0-rc.3",
     "commander": "^5.1.0",
-    "debug": "^4.1.1"
+    "debug": "^4.1.1",
+    "url-regex": "^5.0.0"
   }
 }
