--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "page-loader",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "cli utility for downloading Web pages",
   "engines": {
     "node": ">=14"
@@ -45,6 +45,7 @@
     "cheerio": "^1.0.0-rc.3",
     "commander": "^5.1.0",
     "debug": "^4.1.1",
+    "listr": "^0.14.3",
     "url-regex": "^5.0.0"
   }
 }
