--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "page-loader",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "cli utility for downloading Web pages",
   "engines": {
     "node": ">=14"
@@ -20,7 +20,7 @@
     "cli-utility",
     "page-downloader"
   ],
-  "main": "./src/Page.js",
+  "main": "./index.js",
   "author": "Vitaliy Ushachev",
   "license": "ISC",
   "bugs": {
